Closed Bug 184681 Opened 23 years ago Closed 23 years ago

qt port fails to compile in plugins code

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: timeless)

References

Details

Attachments

(1 file)

In file included from /usr/include/qt/qwindowdefs.h:45, from ../../../../../modules/plugin/base/src/nsPluginHostImpl.cpp:170: /usr/include/qt/qnamespace.h:628: parse error before `0' /usr/include/qt/qnamespace.h:647: missing ';' before right brace /usr/include/qt/qnamespace.h:651: `arrowCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:652: `upArrowCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:653: `crossCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:654: `waitCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:655: `ibeamCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:656: `sizeVerCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:657: `sizeHorCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:658: `sizeBDiagCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:659: `sizeFDiagCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:660: `sizeAllCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:661: `blankCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:662: `splitVCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:664: `splitHCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:666: `pointingHandCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:667: `forbiddenCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:668: `whatsThisCursor' declared as reference but not initialized /usr/include/qt/qnamespace.h:753: parse error before `}' make[3]: *** [nsPluginHostImpl.o] Fehler 1 timeless tells me he has a patch, so assigning to him
Attachment #108886 - Flags: superreview?(roc+moz)
Attachment #108886 - Flags: review?(peterl)
Severity: normal → blocker
Status: NEW → ASSIGNED
Comment on attachment 108886 [details] [diff] [review] X and Qt don't get along... sr=roc+moz
Attachment #108886 - Flags: superreview?(roc+moz) → superreview+
Attachment #108886 - Flags: review?(peterl) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: