Bug 184681 qt port fails to compile in plugins code X and Qt don't get along... r=peterl sr=roc+moz